--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,16 @@
+/* 
+September 18th, 2024
+Paul Bute
+My Professional Website */
+
 /* Global effects */
 
-body{
+body {
     background-color: #291911;
     margin: auto;
 }
 
-#logo{
+#logo {
     text-align: center;
     margin-top: auto;
 }
@@ -13,20 +18,23 @@ body{
 
 /* Nav bar styles */
 
-nav, footer {
+nav,
+footer {
     background-color: #925E30;
     text-align: center;
 }
 
-a:link, a:visited {
+a:link,
+a:visited {
     color: #C4B8A9
 }
 
-nav, footer{
+nav,
+footer {
     border: 5px double #772b0c;
 }
 
-nav a{
+nav a {
     font-size: 32px;
     padding: 15px;
     display: inline-block;
@@ -34,7 +42,9 @@ nav a{
     margin-left: auto;
     width: 20%;
 }
-footer p,footer a{
+
+footer p,
+footer a {
     font-size: 24px;
     padding: 2px;
     display: block;
@@ -44,33 +54,33 @@ footer p,footer a{
     color: #C4B8A9;
 }
 
-.what{
-    display:inline-block;
+.what {
+    display: inline-block;
 }
 
 
-nav a:hover{
+nav a:hover {
     text-shadow: 2px 2px #772b0c;
 }
 
 /* Homepage section */
 
-section img{
+section img {
     margin-top: 20px;
     margin-bottom: 2%;
     margin-left: 1px;
 }
 
-section h3{
+section h3 {
     font-size: 72px;
-    color:#772b0c;
+    color: #772b0c;
     margin-top: 1%;
     margin-left: 1%;
 }
 
-section p{
+section p {
     font-size: 40px;
-    color:#925E30;
+    color: #925E30;
     margin-top: -10px;
     margin-right: auto;
     margin-left: 1%;
@@ -82,35 +92,89 @@ section p{
 
 
 .floatleft {
-    float:left;
+    float: left;
 }
 
 .clearfix::after {
     content: "";
     clear: both;
     display: table;
-  }
+}
 
-.floatright{
-    float:right;
+.floatright {
+    float: right;
 }
 
 /* About us page */
 
-.aboutusimg{
-    float:right;
+.centeredheader {
+    text-align: center;
+}
+
+.aboutusimgright {
+    float: right;
     height: 380px;
     width: auto;
 }
 
-.paragraphbreak{
+.aboutusimgleft {
+    float: left;
+    height: 380px;
+    width: auto;
+}
+
+.paragraphbreak {
     /* border: 5px solid #772b0c; */
     border: none;
     width: 100%;
     height: 0.1px;
 }
 
-.sizedparagraph{
+.sizedparagraph {
     width: 60%;
     height: 400px;
+    margin-left: 0%;
+    margin-bottom: 2.5%;
+}
+
+#shiftleft {
+    margin-left: 15%;
+}
+
+#shiftlefter {
+    margin-left: 30%;
+}
+
+.flexedparagraph {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 60%;
+    height: 400px;
+    margin-left: 0%;
+    margin-bottom: 2.5%;
+}
+
+.aboutusimg {
+    height: 380px;
+    width: auto;
+}
+
+/* Products page */
+
+.imhungry {
+    border: 5px dotted #772b0c;
+    /* display: flex;
+    justify-content: space-evenly;
+    align-items: center; */
+    text-align: center;
+    width: 60%;
+    height: 400px;
+    margin-bottom: 2.5%;
+}
+
+.productimg {
+    height: 380px;
+    width: auto;
+    float: right;
 }
